# tam-observer-sdk

./: CHANGELOG.md  DISCLAIMER.md  EXPORT_MANIFEST.txt  LICENSE  NOTE_OBSERVER_NEUTRAL.md  NOTE_TRADING_OBSERVER.md  README.md  SECURITY.md  doctrine.md  pyproject.toml  receipt.json
.githooks/: pre-push
.github/workflows/: ci.yml  require-head-tag.yml
examples/: basic_usage.py
scripts/: install_githooks.sh
tam_observer/: __init__.py  observer.py  types.py
