[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tam-observer"
version = "0.1.0"
description = "Trading Admissibility Mapper — Observer Edition"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ZOA Labs" }
]
keywords = [
    "trading",
    "admissibility",
    "observer",
    "diagnostics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Documentation = "https://github.com/zoa-labs/tam-observer-sdk#readme"
Repository = "https://github.com/zoa-labs/tam-observer-sdk"

[tool.hatch.build.targets.wheel]
packages = ["tam_observer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tam_observer"
